CloudAlpacas/salesforce/main/default/objects/WhatsAppEngagement__c/WhatsAppEngagement__c.object-meta.xml
<CustomObject>
    <description>Recipient-level engagement event for a WhatsApp send.</description>
    <label>WhatsApp Engagement</label>
    <nameField>
        <displayFormat>WAE-{00000000}</displayFormat>
        <label>WhatsApp Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>