CloudAlpacas/salesforce/main/default/objects/WhatsAppEngagement__c/fields/Bulk_Message__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Message</label>
    <referenceTo>BulkMessage__c</referenceTo>
    <relationshipLabel>WhatsApp Engagements</relationshipLabel>
    <relationshipName>WhatsApp_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>