CloudAlpacas/salesforce/main/default/objects/WhatsAppEngagement__c/fields/Engagement_Channel_Action__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Channel_Action__c</fullName>
    <label>Engagement Channel Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>