CloudAlpacas/salesforce/main/default/objects/WhatsAppEngagement__c/fields/Message_Engagement_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Engagement_Id__c</fullName>
    <description>External upsert key + Data Cloud DMO primary key (shared shape with MessageEngagement).</description>
    <externalId>true</externalId>
    <label>Message Engagement Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>